added responsive design

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <main>
         <section id="info">
             <h1>Our Locations:</h1>
-            <p class="city">Detroit:</p>
-            <p class="city">Grand Rapids:</p>
+            <p class="city">Detroit</p>
+            <p class="city">Grand Rapids</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Corporis assumenda, similique distinctio nem id
                 quidem officia reprehenderid repudiandae quae. Tempore animi nemo sing.</p>
             <p>Lorem ipsum dolor sit amet dolor consectuetur adipisicing elit. Magnam possimus optio porro esse, odio ex
